hydra/test/test_examples/type_errors/binop3.tpc
tele bit<32> x;
init {
    x = 5 < 2;
} 
telemetry {} 
check {}